--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,19 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.5</version>
-	</dependency>
+	    </dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+		
+	    <dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpmime</artifactId>
+		<version>4.2.1</version>
+	   </dependency>
+		
 	</dependencies>
 	<repositories>
 		<repository>
