--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #user data
-jdbc.url=jdbc:mysql://127.0.0.1:3306/safecheck?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/safe_check?useUnicode=true&characterEncoding=utf-8
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
 jdbc.username=root
 jdbc.password=
