【ADMIN】检查统计详情页异步加载实现

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,7 +2,7 @@
 jdbc.url=jdbc:mysql://127.0.0.1:3306/safe_check?useUnicode=true&characterEncoding=utf-8
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
 jdbc.maxActive=10
 jdbc.timeBetweenEvictionRunsMillis=3600000
 jdbc.minEvictableIdleTimeMillis=3600000
