--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,12 @@
 		<artifactId>httpmime</artifactId>
 		<version>4.2.1</version>
 	   </dependency>
-		
+		<dependency>
+		  <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+		  <groupId>org.jsoup</groupId>
+		  <artifactId>jsoup</artifactId>
+		  <version>1.8.3</version>
+		</dependency>		
 	</dependencies>
 	<repositories>
 		<repository>
